Bug 1348016 - nsHttpConnectionMgr::OnMsgCancelTransactions miss to cancel one transaction. r=mayhemer